objects/TASKRAY__trListSetting__mdt.object
<CustomObject>
    <fields>
        <fullName>TASKRAY__trCompletesTask__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if the specified List value will complete a Task.</description>
        <inlineHelpText>Check this box to determine if a Task should be completed when the specified List value is selected.</inlineHelpText>
        <label>Completes Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trListColor__c</fullName>
        <description>TaskRay List Color (hex)</description>
        <label>List Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trListValue__c</fullName>
        <description>API Value of a TaskRay Project Task List picklist value</description>
        <label>TaskRay List Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>TaskRay List Setting</label>
    <pluralLabel>TaskRay List Settings</pluralLabel>
</CustomObject>